# testing-data-pipelines

./: .gitignore  .pre-commit-config.yaml  .rcfile  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
infrastructure/: docker-compose.yaml
infrastructure/database/: Dockerfile  watcher.sql
infrastructure/minio/: Dockerfile
pipelines/: __init__.py
pipelines/dags/: etl_dept_and_population.py
pipelines/helpers/: time_utils.py
pipelines/hooks/: postgres.py
pipelines/operators/: exceptions.py  postgres.py
pipelines/tasks/: http.py
pipelines/tasks/departments/: departement_and_population_merger.py  department_processor.py  population_processor.py  processor.py
pipelines/tasks/pollution/: models.py  processor.py
tests/: __init__.py  conftest.py
tests/dags/: test_etl_dpt_and_population.py
tests/data/: demographyref-france-departement-empty.csv  demographyref-france-departement-match.csv  demographyref-france-departement.csv  departments.parquet  georef-france-departement-empty.csv  georef-france-departement.csv  no-match-population.parquet  population.parquet
tests/operators/: test_postgres_monitor.py
tests/tasks/: test_department_and_population_merger.py  test_department_processor.py  test_http.py  test_population_processor.py
