[tool.poetry]
name = "testing-data-pipelines"
version = "0.0.1"
description = ""
authors = ["Stéphanie Bergamo <stephanie@bergamo.fr>"]
license = "MIT"
readme = 'README.md'
packages = [
    {include = "pipelines" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
