[tool.poetry]
name = "testing-data-pipelines"
version = "0.0.1"
description = ""
authors = ["Stéphanie Bergamo <stephanie@bergamo.fr>"]
license = "MIT"
readme = 'README.md'
packages = [
    {include = "pipelines" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
apache-airflow = "^2.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
pylint = "^2.15.3"
pytype = "^2022.9.27"
black = "^22.8.0"
flake8-docstrings = "^1.6.0"
bandit = "^1.7.4"
safety = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
